--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
         "removeComments": false,
         "preserveConstEnums": true,
         "sourceMap": false,
-        "strict": true
+        "strict": true,
+        "types": ["cypress"]
     },
     "files": [
-        "./src/util.ts"
-    ]
+        "./src/util.ts",
+    ],
+    "include": ["cypress/**/*.ts"]
 }
