--- a/package.json
+++ b/package.json
@@ -61,10 +61,6 @@
         "build-dist-and-restart": "npm run build && npm run start-server-dev"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "~1.2.36",
-        "@fortawesome/free-regular-svg-icons": "~5.15.4",
-        "@fortawesome/free-solid-svg-icons": "~5.15.4",
-        "@fortawesome/vue-fontawesome": "~3.0.0-5",
         "@louislam/sqlite3": "~15.0.6",
         "@popperjs/core": "~2.10.2",
         "args-parser": "~1.3.0",
@@ -72,11 +68,8 @@
         "axios-ntlm": "^1.3.0",
         "badge-maker": "^3.3.1",
         "bcryptjs": "~2.4.3",
-        "bootstrap": "5.1.3",
         "bree": "~7.1.5",
         "chardet": "^1.3.0",
-        "chart.js": "~3.6.2",
-        "chartjs-adapter-dayjs": "~1.0.0",
         "check-password-strength": "^2.0.5",
         "cheerio": "^1.0.0-rc.10",
         "chroma-js": "^2.1.2",
@@ -87,7 +80,6 @@
         "express": "~4.17.3",
         "express-basic-auth": "~1.2.1",
         "express-static-gzip": "^2.1.7",
-        "favico.js": "^0.3.10",
         "form-data": "~4.0.0",
         "http-graceful-shutdown": "~3.1.7",
         "http-proxy-agent": "^5.0.0",
@@ -102,21 +94,57 @@
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
         "password-hash": "~1.2.2",
-        "postcss-rtlcss": "~3.4.1",
-        "postcss-scss": "~4.0.3",
-        "prismjs": "^1.27.0",
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.1",
-        "qrcode": "~1.5.0",
         "redbean-node": "0.1.4",
         "socket.io": "~4.4.1",
         "socket.io-client": "~4.4.1",
         "socks-proxy-agent": "^6.1.1",
         "tar": "^6.1.11",
         "tcp-ping": "~0.1.1",
-        "thirty-two": "~1.0.2",
+        "thirty-two": "~1.0.2"
+    },
+    "devDependencies": {
+        "@actions/github": "~5.0.1",
+        "@babel/eslint-parser": "~7.17.0",
+        "@babel/preset-env": "^7.15.8",
+        "@fortawesome/fontawesome-svg-core": "~1.2.36",
+        "@fortawesome/free-regular-svg-icons": "~5.15.4",
+        "@fortawesome/free-solid-svg-icons": "~5.15.4",
+        "@fortawesome/vue-fontawesome": "~3.0.0-5",
+        "@types/bootstrap": "~5.1.9",
+        "@vitejs/plugin-legacy": "~1.8.2",
+        "@vitejs/plugin-vue": "~2.3.3",
+        "@vue/compiler-sfc": "~3.2.36",
+        "aedes": "^0.46.3",
+        "babel-plugin-rewire": "~1.2.0",
+        "bootstrap": "5.1.3",
+        "chart.js": "~3.6.2",
+        "chartjs-adapter-dayjs": "~1.0.0",
+        "concurrently": "^7.1.0",
+        "core-js": "~3.18.3",
+        "cross-env": "~7.0.3",
+        "dns2": "~2.0.1",
+        "eslint": "~8.14.0",
+        "eslint-plugin-vue": "~8.7.1",
+        "favico.js": "^0.3.10",
+        "jest": "~27.2.5",
+        "jest-puppeteer": "~6.0.3",
+        "postcss-html": "^1.3.1",
+        "postcss-rtlcss": "~3.4.1",
+        "postcss-scss": "~4.0.3",
+        "prismjs": "^1.27.0",
+        "puppeteer": "~13.1.3",
+        "qrcode": "~1.5.0",
+        "rollup-plugin-visualizer": "^5.6.0",
+        "sass": "~1.42.1",
+        "stylelint": "~14.7.1",
+        "stylelint-config-standard": "~25.0.0",
         "timezones-list": "~3.0.1",
+        "typescript": "~4.4.4",
         "v-pagination-3": "~0.1.7",
+        "vite": "~2.9.9",
+        "vite-plugin-compression": "^0.5.1",
         "vue": "next",
         "vue-chart-3": "3.0.9",
         "vue-confirm-dialog": "~1.0.2",
@@ -128,35 +156,7 @@
         "vue-qrcode": "~1.0.0",
         "vue-router": "~4.0.14",
         "vue-toastification": "~2.0.0-rc.5",
-        "vuedraggable": "~4.1.0"
-    },
-    "devDependencies": {
-        "@actions/github": "~5.0.1",
-        "@babel/eslint-parser": "~7.17.0",
-        "@babel/preset-env": "^7.15.8",
-        "@types/bootstrap": "~5.1.9",
-        "@vitejs/plugin-legacy": "~1.8.2",
-        "@vitejs/plugin-vue": "~2.3.3",
-        "@vue/compiler-sfc": "~3.2.36",
-        "aedes": "^0.46.3",
-        "babel-plugin-rewire": "~1.2.0",
-        "concurrently": "^7.1.0",
-        "core-js": "~3.18.3",
-        "cross-env": "~7.0.3",
-        "dns2": "~2.0.1",
-        "eslint": "~8.14.0",
-        "eslint-plugin-vue": "~8.7.1",
-        "jest": "~27.2.5",
-        "jest-puppeteer": "~6.0.3",
-        "postcss-html": "^1.3.1",
-        "puppeteer": "~13.1.3",
-        "rollup-plugin-visualizer": "^5.6.0",
-        "sass": "~1.42.1",
-        "stylelint": "~14.7.1",
-        "stylelint-config-standard": "~25.0.0",
-        "typescript": "~4.4.4",
-        "vite": "~2.9.9",
-        "vite-plugin-compression": "^0.5.1",
+        "vuedraggable": "~4.1.0",
         "wait-on": "^6.0.1"
     }
 }
