--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -20,10 +20,15 @@ HEALTHCHECK --interval=60s --timeout=30s --start-period=180s --retries=5 CMD nod
 ENTRYPOINT ["/usr/bin/dumb-init", "--", "extra/entrypoint.sh"]
 CMD ["node", "server/server.js"]
 
+FROM release AS mariadb
+# Install MariaDB
+RUN apt update && \
+    apt --yes --no-install-recommends install mariadb-server && \
+    rm -rf /var/lib/apt/lists/* && \
+    apt --yes autoremove
 
-FROM release AS nightly
+FROM mariadb AS nightly
 RUN npm run mark-as-nightly
-
 
 # Upload the artifact to Github
 FROM louislam/uptime-kuma:base-debian AS upload-artifact
