--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -31,22 +31,21 @@ WORKDIR /app
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1
 
-## Install GitHub CLI
+## Install Git
 RUN apt update \
     && apt --yes --no-install-recommends install curl \
     && curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
     && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
     && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
     && apt update \
-    && apt install gh -y
+    && apt --yes --no-install-recommends  install git
 
 ## Empty the directory, because we have to clone the Git repo.
 RUN rm -rf ./* && chown node /app
 
 USER node
 
-RUN git clone https://github.com/louislam/uptime-kuma.git
-RUN gh pr checkout 2023
+RUN git clone --branch pr-test https://github.com/louislam/uptime-kuma.git .
 RUN npm ci
 
 EXPOSE 3000 3001
