--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -44,8 +44,9 @@ RUN apt update \
 RUN rm -rf ./* && chown node /app
 
 USER node
-
-RUN git clone --branch pr-test https://github.com/louislam/uptime-kuma.git .
+RUN git config --global user.email "no-reply@no-reply.com"
+RUN git config --global user.name "PR Tester"
+RUN git clone https://github.com/louislam/uptime-kuma.git .
 RUN npm ci
 
 EXPOSE 3000 3001
