--- a/package.json
+++ b/package.json
@@ -140,9 +140,9 @@
         "favico.js": "^0.3.10",
         "jest": "~27.2.5",
         "jest-puppeteer": "~6.0.3",
-        "postcss-html": "^1.3.1",
-        "postcss-rtlcss": "~3.4.1",
-        "postcss-scss": "~4.0.3",
+        "postcss-html": "~1.5.0",
+        "postcss-rtlcss": "~3.7.2",
+        "postcss-scss": "~4.0.4",
         "prismjs": "^1.27.0",
         "puppeteer": "~13.1.3",
         "qrcode": "~1.5.0",
@@ -150,6 +150,7 @@
         "sass": "~1.42.1",
         "stylelint": "~14.7.1",
         "stylelint-config-standard": "~25.0.0",
+        "terser": "^5.15.0",
         "timezones-list": "~3.0.1",
         "typescript": "~4.4.4",
         "v-pagination-3": "~0.1.7",
