--- a/package.json
+++ b/package.json
@@ -65,11 +65,7 @@
         "cy:run": "npx cypress run --browser chrome --headless"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "~1.2.36",
-        "@fortawesome/free-regular-svg-icons": "~5.15.4",
-        "@fortawesome/free-solid-svg-icons": "~5.15.4",
-        "@fortawesome/vue-fontawesome": "~3.0.0-5",
-        "@grpc/grpc-js": "^1.6.8",
+        "@grpc/grpc-js": "~1.7.0",
         "@louislam/sqlite3": "~15.0.6",
         "args-parser": "~1.3.0",
         "axios": "~0.27.0",
@@ -108,8 +104,7 @@
         "pg-connection-string": "^2.5.0",
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.1",
-        "protobufjs": "^7.0.0",
-        "qrcode": "~1.5.0",
+        "protobufjs": "~7.1.1",
         "redbean-node": "0.1.4",
         "socket.io": "~4.4.1",
         "socket.io-client": "~4.4.1",
