--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,27 +1,27 @@
 FROM louislam/uptime-kuma:base-debian AS build
+USER node
 WORKDIR /app
-
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1
-
-COPY . .
-RUN npm ci --production && \
-    chmod +x /app/extra/entrypoint.sh
+COPY --chown=node:node . .
+RUN npm ci --production
 
 
 FROM louislam/uptime-kuma:base-debian AS release
+USER node
 WORKDIR /app
 
 # Copy app files from build layer
-COPY --from=build /app /app
+COPY --chown=node:node --from=build /app /app
 
 EXPOSE 3001
 VOLUME ["/app/data"]
 HEALTHCHECK --interval=60s --timeout=30s --start-period=180s --retries=5 CMD node extra/healthcheck.js
-ENTRYPOINT ["/usr/bin/dumb-init", "--", "extra/entrypoint.sh"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 CMD ["node", "server/server.js"]
 
 
 FROM release AS nightly
+USER node
 RUN npm run mark-as-nightly
 
 # Build an image for testing pr
