--- a/.github/workflows/stale-bot.yml
+++ b/.github/workflows/stale-bot.yml
@@ -1,8 +1,8 @@
 name: 'Automatically close stale issues and PRs'
 on:
   schedule:
-    - cron: '0 0 * * *'
-#Run once a day at midnight 
+    - cron: '0 */6 * * *'
+#Run every 6 hours 
 
 jobs:
   stale:
@@ -10,14 +10,14 @@ jobs:
     steps:
       - uses: actions/stale@v5
         with:
-          stale-issue-message: 'We are clearing up our old issues and your ticket has been open for 3 months with no activity. Remove stale label or comment or this will be closed in 7 days.'
-          stale-pr-message: 'We are clearing up our old Pull Requests and yours has been open for 3 months with no activity. Remove stale label or comment or this will be closed in 7 days.'
-          close-issue-message: 'This issue was closed because it has been stalled for 7 days with no activity.'
-          close-pr-message: 'This PR was closed because it has been stalled for 7 days with no activity.'
+          stale-issue-message: 'We are clearing up our old issues and your ticket has been open for 3 months with no activity. Remove stale label or comment or this will be closed in 2 days.'
+          stale-pr-message: 'We are clearing up our old Pull Requests and yours has been open for 3 months with no activity. Remove stale label or comment or this will be closed in 2 days.'
+          close-issue-message: 'This issue was closed because it has been stalled for 2 days with no activity.'
+          close-pr-message: 'This PR was closed because it has been stalled for 2 days with no activity.'
           days-before-stale: 90
-          days-before-close: 7
+          days-before-close: 2
           exempt-issue-labels: 'News,Medium,High,discussion,bug,doc,feature-request'
           exempt-pr-labels: 'awaiting-approval,work-in-progress,enhancement,feature-request'
           exempt-issue-assignees: 'louislam'
           exempt-pr-assignees: 'louislam'
-          operations-per-run: 90
+          operations-per-run: 200
