--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "http-proxy-agent": "^5.0.0",
         "https-proxy-agent": "^5.0.0",
         "iconv-lite": "^0.6.3",
+        "jsesc": "^3.0.2",
         "jsonwebtoken": "~8.5.1",
         "jwt-decode": "^3.1.2",
         "limiter": "^2.1.0",
