--- a/package.json
+++ b/package.json
@@ -67,47 +67,47 @@
         "@louislam/sqlite3": "~15.0.6",
         "args-parser": "~1.3.0",
         "axios": "~0.27.0",
-        "axios-ntlm": "^1.3.0",
-        "badge-maker": "^3.3.1",
+        "axios-ntlm": "~1.3.0",
+        "badge-maker": "~3.3.1",
         "bcryptjs": "~2.4.3",
         "bree": "~7.1.5",
         "cacheable-lookup": "~6.0.4",
-        "chardet": "^1.3.0",
+        "chardet": "~1.4.0",
         "check-password-strength": "^2.0.5",
-        "cheerio": "^1.0.0-rc.10",
-        "chroma-js": "^2.1.2",
+        "cheerio": "~1.0.0-rc.12",
+        "chroma-js": "~2.4.2",
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
-        "compression": "^1.7.4",
-        "dayjs": "^1.11.0",
+        "compression": "~1.7.4",
+        "dayjs": "~1.11.5",
         "express": "~4.17.3",
         "express-basic-auth": "~1.2.1",
-        "express-static-gzip": "^2.1.7",
+        "express-static-gzip": "~2.1.7",
         "form-data": "~4.0.0",
         "http-graceful-shutdown": "~3.1.7",
-        "http-proxy-agent": "^5.0.0",
-        "https-proxy-agent": "^5.0.0",
-        "iconv-lite": "^0.6.3",
-        "jsesc": "^3.0.2",
+        "http-proxy-agent": "~5.0.0",
+        "https-proxy-agent": "~5.0.1",
+        "iconv-lite": "~0.6.3",
+        "jsesc": "~3.0.2",
         "jsonwebtoken": "~8.5.1",
-        "jwt-decode": "^3.1.2",
-        "limiter": "^2.1.0",
-        "mqtt": "^4.2.8",
-        "mssql": "^8.1.0",
+        "jwt-decode": "~3.1.2",
+        "limiter": "~2.1.0",
+        "mqtt": "~4.3.7",
+        "mssql": "~8.1.4",
         "node-cloudflared-tunnel": "~1.0.9",
-        "node-radius-client": "^1.0.0",
+        "node-radius-client": "~1.0.0",
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
         "password-hash": "~1.2.2",
-        "pg": "^8.7.3",
-        "pg-connection-string": "^2.5.0",
+        "pg": "~8.8.0",
+        "pg-connection-string": "~2.5.0",
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.1",
         "redbean-node": "0.1.4",
         "socket.io": "~4.4.1",
         "socket.io-client": "~4.4.1",
         "socks-proxy-agent": "6.1.1",
-        "tar": "^6.1.11",
+        "tar": "~6.1.11",
         "tcp-ping": "~0.1.1",
         "thirty-two": "~1.0.2"
     },
@@ -137,18 +137,18 @@
         "dns2": "~2.0.1",
         "eslint": "~8.14.0",
         "eslint-plugin-vue": "~8.7.1",
-        "favico.js": "^0.3.10",
+        "favico.js": "~0.3.10",
         "jest": "~27.2.5",
         "postcss-html": "~1.5.0",
         "postcss-rtlcss": "~3.7.2",
         "postcss-scss": "~4.0.4",
-        "prismjs": "^1.27.0",
+        "prismjs": "~1.29.0",
         "qrcode": "~1.5.0",
         "rollup-plugin-visualizer": "^5.6.0",
         "sass": "~1.42.1",
         "stylelint": "~14.7.1",
         "stylelint-config-standard": "~25.0.0",
-        "terser": "^5.15.0",
+        "terser": "~5.15.0",
         "timezones-list": "~3.0.1",
         "typescript": "~4.4.4",
         "v-pagination-3": "~0.1.7",
@@ -161,7 +161,7 @@
         "vue-i18n": "~9.1.9",
         "vue-image-crop-upload": "~3.0.3",
         "vue-multiselect": "~3.0.0-alpha.2",
-        "vue-prism-editor": "^2.0.0-alpha.2",
+        "vue-prism-editor": "~2.0.0-alpha.2",
         "vue-qrcode": "~1.0.0",
         "vue-router": "~4.0.14",
         "vue-toastification": "~2.0.0-rc.5",
