--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "uptime-kuma",
-    "version": "1.18.5",
+    "version": "1.19.0-beta.0",
     "license": "MIT",
     "repository": {
         "type": "git",
