--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "dev": "concurrently -k -r \"wait-on tcp:3000 && npm run start-server-dev \" \"npm run start-frontend-dev\"",
         "start-frontend-dev": "cross-env NODE_ENV=development vite --host --config ./config/vite.config.js",
         "start": "npm run start-server",
-        "start-server": "node server/server.js",
+        "start-server": "node --watch server/server.js",
         "start-server-dev": "cross-env NODE_ENV=development node server/server.js",
+        "start-server-watch-dev": "cross-env NODE_ENV=development node  --watch server/server.js",
         "build": "vite build --config ./config/vite.config.js",
         "test": "node test/prepare-test-server.js && npm run jest-backend",
         "test-with-build": "npm run build && npm test",
