--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "jsonwebtoken": "~8.5.1",
         "jwt-decode": "~3.1.2",
         "limiter": "~2.1.0",
+        "mongodb": "^4.12.0",
         "mqtt": "~4.3.7",
         "mssql": "~8.1.4",
         "node-cloudflared-tunnel": "~1.0.9",
