--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "@louislam/sqlite3": "15.1.2",
         "args-parser": "~1.3.0",
         "axios": "~0.27.0",
-        "axios-ntlm": "~1.3.0",
+        "axios-ntlm": "1.3.0",
         "badge-maker": "~3.3.1",
         "bcryptjs": "~2.4.3",
         "bree": "~7.1.5",
