Switch from Debian Buster base to Bullseye

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -2,7 +2,7 @@
 # Build in Golang
 # Run npm run build-healthcheck-armv7 in the host first, another it will be super slow where it is building the armv7 healthcheck
 ############################################
-FROM golang:1.19.4-buster AS build_healthcheck
+FROM golang:1.19.4-bullseye AS build_healthcheck
 WORKDIR /app
 ARG TARGETPLATFORM
 COPY ./extra/ ./extra/
