--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     },
     "dependencies": {
         "@grpc/grpc-js": "~1.7.3",
+        "@louislam/ping": "~0.4.2-mod.0",
         "@louislam/sqlite3": "15.1.2",
         "args-parser": "~1.3.0",
         "axios": "~0.27.0",
@@ -105,7 +106,6 @@
         "password-hash": "~1.2.2",
         "pg": "~8.8.0",
         "pg-connection-string": "~2.5.0",
-        "ping": "~0.4.2",
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.1",
         "protobufjs": "~7.1.1",
